<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quản lý nhân viên</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="qlnv">Manage Employee</string>
    <string name="emID">Employee ID</string>
    <string name="emName">Employee name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add">Add</string>
    <string name="del">Del</string>
    <string name="listEm">List Employees</string>

</resources>
