<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:background="@color/yellow"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:padding="5dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/qlnv"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:text="@string/emID" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_ID"
        android:layout_toLeftOf="@+id/et_NAME"
        android:text="@string/emName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/et_NAME"
        android:text="@string/sex" />

    <EditText
        android:id="@+id/et_NAME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:hint="@string/emName"
        android:ems="10"
        android:inputType="textPersonName" />
        
    <EditText
        android:id="@+id/et_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/emID"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:ems="10" />

    <Button
        android:id="@+id/but_ADD"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rad_SEX"
        android:layout_alignRight="@+id/rad_SEX"
        android:layout_below="@+id/rad_SEX"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/but_ADD"
        android:weightSum="10" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:text="@string/listEm"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/but_DEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:contentDescription="@string/del"
            android:src="@drawable/deletered" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_Employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1" >
    </ListView>

    <RadioGroup
        android:id="@+id/rad_SEX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_NAME"
        android:layout_alignTop="@+id/textView4"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

</RelativeLayout>